addes z view to 100 to fix bug... on mobile view images where showing on top of the nav bar

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,6 +12,7 @@ li {
     padding: 0.5rem 0rem;
     background-color: #fff;
     color: black;
+    margin-bottom: 2em;
 }
 
 .brand-name {
@@ -87,6 +88,7 @@ li {
         height: calc(100vh - 77px);
         background-color: white;
         padding: 4em;
+        z-index: 100;
     }
 
     .navigation-menu li {
